# action_2_poor

./: LICENSE  README.md
doc/: Action 2 Poor Logo.pptx  SPI优化.md  使用NEON指令加速RGB888和RGB565的相互转换.md  成本估算及采购渠道.xlsx
firmware/camera_img/: uImage  update_pack.tar
firmware/hisi_official_img/: rootfs_hi3516ev200_64k.jffs2  uImage_hi3516ev200
hardware/model/3dp_shell/: Action_2_Poor_3DP.f3d  shell1.stl  shell2.stl
hardware/model/cnc_shell/: Action_2_Poor_CNC_v2.f3d  shell1.step  shell2.step  shell3.step
hardware/model/switch/: switch.f3d  switch.stl
software/: CMakeLists.txt
software/app/camera/: CMakeLists.txt  main.c
software/app/camera/src/: cam_gui.c  cam_gui.h  camera_config.c  camera_config.h  color_convert.c  color_convert.h  file_opt.c  file_opt.h  himpp_audio.c  himpp_sys.c  himpp_venc.c  himpp_video.c  key.c  key.h  media.c  media.h  ts_mux.c  ts_mux.h
software/app/hello_world/: CMakeLists.txt  main.c
software/app/lvgl_test/: CMakeLists.txt  main.c
software/app/peripheral_test/: CMakeLists.txt  main.c  mpu6050.c  mpu6050.h  ov5640.c  ov5640.h
software/app/udp_video/: CMakeLists.txt  main.c  readme.md
software/app/udp_video/src/: camera_config.c  camera_config.h  himpp.h  himpp_audio.c  himpp_isp.c  himpp_sys.c  himpp_venc.c  himpp_vi.c  himpp_video.c  himpp_vpss.c  media_buf.c  media_buf.h  socket_udp.c  socket_udp.h
software/ext_lib/libmpeg/: CMakeLists.txt
software/ext_lib/lvgl/: lv_conf.h
software/patches/kernel_patch/drivers/mtd/spi-nor/: spi-nor.c
software/patches/kernel_patch/drivers/mtd/spi-nor/hisfc350/: hisfc350_spi_ids.c
software/patches/u_boot_patch/: Makefile
software/patches/u_boot_patch/cmd/: cmd_vo_hi3516ev200.c
software/patches/u_boot_patch/drivers/mtd/spi/hifmc100/: hifmc_spi_nor_ids.c
software/patches/u_boot_patch/include/configs/: hi3516ev200.h
software/patches/u_boot_patch/product/hiosd/rgb/hi3516ev200/: Makefile  rgb.c
software/utils/: ft6206.c  ft6206.h  gyroflow_log.c  gyroflow_log.h  himm.c  himm.h  hisi_adc.c  hisi_adc.h  i2c.c  i2c.h  lv_stb_truetype.c  lv_stb_truetype.h  mpu6050.c  mpu6050.h  st7789.c  st7789.h
software/utils/ov5640/: CMakeLists.txt  ov5640_cmos.c  ov5640_cmos_ex.h  ov5640_sensor_ctl.c  readme.md
software/utils/st7789_ko/: Makefile  readme.md  ssp_st7789.c  ssp_st7789.h
